2009-08-04  Andreas Schmitz <schmitz@lat-lon.de>
        * src/de/latlon/deejump/wfs/data/JUMPFeatureFactory.java:
        Fix problem of getting multiple features when only one was digitized.

2008-10-06  Andreas Schmitz <schmitz@lat-lon.de>

        * src/de/latlon/deejump/wfs/transaction/TransactionFactory.java:
        Fixed faulty transaction request.

2008-08-18  Andreas Schmitz <schmitz@lat-lon.de>
        * src/de/latlon/deejump/wfs/plugin/WFSPlugIn.java: Removed unnecessary
        checks.

2008-07-17  Andreas Schmitz <schmitz@lat-lon.de>
        * lib/deegree2.jar: Fixed bug in deegree2 GML parser so the
        featureMembers element can be used.

2008-07-17  Andreas Schmitz <schmitz@lat-lon.de>
        * lib/deegree2.jar
        * src/de/latlon/deejump/wfs/data/JUMPFeatureFactory.java
        * src/de/latlon/deejump/wfs/plugin/WFSPlugIn.java
        Fixed problems with xs:date values.

2008-07-17  Andreas Schmitz <schmitz@lat-lon.de>
        * src/de/latlon/deejump/wfs/i18n/I18N.java
        * src/de/latlon/deejump/wfs/i18n/messages_fi.properties
        * src/de/latlon/deejump/wfs/i18n/messages_en.properties
        * src/de/latlon/deejump/wfs/i18n/messages_fr.properties
        * src/de/latlon/deejump/wfs/i18n/messages_de.properties
        * src/de/latlon/deejump/wfs/auth/LoginDialog.java
        * src/de/latlon/deejump/wfs/ui/WFSPanel.java
        * src/de/latlon/deejump/wfs/ui/SpatialCriteriaPanel.java
        * src/de/latlon/deejump/wfs/ui/RequestTextArea.java
        * src/de/latlon/deejump/wfs/ui/PropertyCriteriaPanel.java
        * src/de/latlon/deejump/wfs/ui/PropertySelectionPanel.java
        * src/de/latlon/deejump/wfs/ui/WFSFrame.java
        * src/de/latlon/deejump/wfs/ui/WFSOptionsPanel2.java
        * src/de/latlon/deejump/wfs/ui/WFSPanelButtons.java
        * src/de/latlon/deejump/wfs/plugin/UpdateWFSLayerPlugIn.java
        * src/de/latlon/deejump/wfs/plugin/WFSPlugIn.java: