@@ -1,3 +1,8 @@
+2009-08-05  Andreas Schmitz <schmitz@lat-lon.de>
+        * src/de/latlon/deejump/wfs/jump/WFSLayerListener.java
+        * src/de/latlon/deejump/wfs/plugin/WFSPlugIn.java:
+        Fixed a follow up problem related to previous fix.
+
 2009-08-04  Andreas Schmitz <schmitz@lat-lon.de>
         * src/de/latlon/deejump/wfs/data/JUMPFeatureFactory.java:
         Fix problem of getting multiple features when only one was digitized.
